# pop-pay

./: .gitignore  .mcp.json  .npmignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  glama.json  install.sh  package-lock.json  package.json  server.json  test_pop_state.db-shm  test_pop_state.db-wal  tsconfig.json
.claude/: settings.json
.github/workflows/: ci.yml  dispatch-tap-bump.yml  publish.yml  publish.yml.draft
config/: doctor-remediation.yaml
docs/: AGENT_COMMERCE_THREAT_MODEL.md  CATEGORIES_COOKBOOK.md  CATEGORIES_DECISION_CRITERIA.md  COMPLIANCE_FAQ.md  CROSS_PROCESS_SETUP.md  DOCTOR.md  ENV_REFERENCE.md  GUARDRAIL_BENCHMARK.md  INTEGRATION_GUIDE.md  RED_TEAM_METHODOLOGY.md  THREAT_MODEL.md  VAULT_THREAT_MODEL.md
native/: Cargo.toml  build.rs  index.js  inject-salt.js  package.json
native/src/: lib.rs
pop-pay-skill/: LICENSE.txt  SKILL.md  _meta.json
scoped-mirror/: README.md  index.js  package.json
src/: cli-dashboard.ts  cli-main.ts  cli-vault.ts  cli.ts  client.ts  dashboard.ts  doctor-f9.ts  doctor.ts  errors.ts  index.ts  mcp-server.ts  transport.ts  vault.ts
tests/: audit-and-migration.test.ts  client.test.ts  dashboard.test.ts  doctor-f9.test.ts  guardrails-advanced.test.ts  guardrails.test.ts  imports.test.ts  injector.test.ts  integration.test.ts  llm-guardrails-typed-errors.test.ts  models.test.ts  providers.test.ts  ssrf.test.ts  state.test.ts  toctou.test.ts  transport.test.ts  vault-advanced.test.ts  vault-f13-format.test.ts  vault-interop.test.ts  vault.test.ts
(+116 files in other folders)
