[package]
name = "pop-pay-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi8"] }
napi-derive = "2"
scrypt = { version = "0.11", features = ["simple"] }
zeroize = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
